Disabled image scanning for a while

--- a/config.properties
+++ b/config.properties
@@ -4,7 +4,7 @@ DOCKERFILE_PATH      = Dockerfile
 ENVIRONMENT          = prod
 SLACK_CHANNEL_NAME   = docker
 CHECK_LINT           = true
-SCAN_IMAGE           = true
+SCAN_IMAGE           = false
 PUBLISH_DOCKERHUB    = true
 PUBLISH_QUAY         = true
 DOCKERHUB_USERNAME   = opstree
